--- a/_config.yml
+++ b/_config.yml
@@ -13,32 +13,32 @@ baseurl: ""
 lang: en
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone:
+timezone: America/New_York
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Cyber Incident Insight with Robert # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: A doc site for my random tech interests # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  This site is mainly for me to document the various tech learning journies I am taking.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ""
+url: "https://rbridge1104.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: rbridge1104 # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: /@rbridge1104 # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Robert Bridge
+  email: rbridge1104@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username # change to your twitter homepage
@@ -80,7 +80,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://pbs.twimg.com/profile_images/1665578276914429958/UEyOseMg_400x400.jpg
 
 # boolean type, the global switch for TOC in posts.
 toc: true
